--- a/ASP.NET Fundamentals/ASP.NET Core Introduction/ShoppingList/ShoppingList/Views/Product/Add.cshtml
+++ b/ASP.NET Fundamentals/ASP.NET Core Introduction/ShoppingList/ShoppingList/Views/Product/Add.cshtml
@@ -18,3 +18,9 @@
         <input class="btn btn-primary mt-3" type="submit" value="Create"/>
     </form>
 </div>
+
+@section Scripts {
+    @{
+        Html.RenderPartial("_ValidationScriptsPartial");
+    }   
+}
