--- a/ASP.NET Fundamentals/Workshop TaskBoard App/TaskBoard.App/TaskBoard.App/Views/_ViewImports.cshtml
+++ b/ASP.NET Fundamentals/Workshop TaskBoard App/TaskBoard.App/TaskBoard.App/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using TaskBoard.App
 @using TaskBoard.App.Web.ViewModels
+@using TaskBoardApp.Web.ViewModels.Board;
+@using TaskBoardApp.Web.ViewModels.Task;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
