--- a/ASP.NET Fundamentals/Workshop TaskBoard App/TaskBoard.App/TaskBoard.App/Views/Home/Index.cshtml
+++ b/ASP.NET Fundamentals/Workshop TaskBoard App/TaskBoard.App/TaskBoard.App/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<link rel="stylesheet" href="~/css/home.css" />
 
 <div class="text-center">
     <h1 class="display-4">TaskBoard: A Board For Your Tasks</h1>    
